fix: fixed blurred edges on scroll

--- a/folio-fe/components/TitleBar.module.sass
+++ b/folio-fe/components/TitleBar.module.sass
@@ -23,15 +23,20 @@
   height: 100vh
   padding: 0 32px
   background: transparentize($color-primary, 1)
+  -webkit-backdrop-filter: blur(0px)
+  -moz-backdrop-filter: blur(0px)
+  -ms-backdrop-filter: blur(0px)
+  -o-backdrop-filter: blur(0px)
+  backdrop-filter: blur(0px)
+  justify-content: center
+
+.title[data-isscrolling="true"]
+  background: transparentize($color-primary, 0.25)
   -webkit-backdrop-filter: blur(7px)
   -moz-backdrop-filter: blur(7px)
   -ms-backdrop-filter: blur(7px)
   -o-backdrop-filter: blur(7px)
   backdrop-filter: blur(7px)
-  justify-content: center
-
-.title[data-isscrolling="true"]
-  background: transparentize($color-primary, 0.25)
   justify-content: flex-start
 
 .name
